--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,7 +1,7 @@
 {% extends 'global/base.html' %}
 
 {% block content %}
-{% if contacts %}
+{% if page_obj %}
     <div class="responsive-table">
         <table class="contacts-table">
             <caption class ="table-caption">
@@ -20,7 +20,7 @@
 
             <tbody>
 
-                {% for contact in contacts  %}
+                {% for contact in page_obj  %}
 
                     <tr class="table-row">
 
