--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -19,6 +19,7 @@
             </p>
         {% endif %}
 
+        {% if user == contact.owner %}
         <div class="contact-links">
             <a class="btn btn-link" href="{% url 'contact:update' contact.id %}">Update</a>
 
@@ -34,6 +35,7 @@
 
             </form>
         </div>
+        {% endif %}
     </div>
 
 {% endblock %}
